bad/method_return_type_of_nonexistent_class_array.example_compiler_output
ERROR
[1mbad/method_return_type_of_nonexistent_class_array.lat:3:2: [1;31merror: [0;1mUnknown class: list[m
	list[] foo(int x) {}
	[1;32m^[m
